--- a/templates/menus.html
+++ b/templates/menus.html
@@ -28,5 +28,61 @@
         <span class="nav-link-text ms-1">Dashboard</span>
       </a>
     </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">
+          <div class="icon icon-shape icon-sm text-center d-flex align-items-center justify-content-center">
+            <i class="ni ni-map-big text-info text-sm opacity-10"></i>
+          </div>
+          <span class="nav-link-text ms-1">Data Jurusan</span>
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">
+          <div class="icon icon-shape icon-sm text-center d-flex align-items-center justify-content-center">
+            <i class="ni ni-shop text-info text-sm opacity-10"></i>
+          </div>
+          <span class="nav-link-text ms-1">Data Kelas</span>
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">
+          <div class="icon icon-shape icon-sm text-center d-flex align-items-center justify-content-center">
+            <i class="ni ni-books text-info text-sm opacity-10"></i>
+          </div>
+          <span class="nav-link-text ms-1">Data Mapel</span>
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">
+          <div class="icon icon-shape icon-sm text-center d-flex align-items-center justify-content-center">
+            <i class="ni ni-single-02 text-info text-sm opacity-10"></i>
+          </div>
+          <span class="nav-link-text ms-1">Guru</span>
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">
+          <div class="icon icon-shape icon-sm text-center d-flex align-items-center justify-content-center">
+            <i class="ni ni-time-alarm text-info text-sm opacity-10"></i>
+          </div>
+          <span class="nav-link-text ms-1">Range Jam</span>
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">
+          <div class="icon icon-shape icon-sm text-center d-flex align-items-center justify-content-center">
+            <i class="ni ni-single-copy-04 text-info text-sm opacity-10"></i>
+          </div>
+          <span class="nav-link-text ms-1">Jadwal Khusus</span>
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">
+          <div class="icon icon-shape icon-sm text-center d-flex align-items-center justify-content-center">
+            <i class="ni ni-calendar-grid-58 text-info text-sm opacity-10"></i>
+          </div>
+          <span class="nav-link-text ms-1">Penjadwalan</span>
+        </a>
+    </li>
   </ul>
 </div>
