--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
 {% load static %}
-
 {% block content %}
 <div class="container-fluid py-4">
   <div class=" mb-4 ">
@@ -9,9 +8,105 @@
         <div class="card-body">
           <h5>Dasboard</h5>
           <h6>Selamat datang {{user.username}} !!</h6>
-          <p>Sistem Informasi Akademik Sekolah Kreatif Muhammadiyah 2 Bontang</p>
+          <p>Sistem Informasi Penjadwalan Sekolah Kreatif Muhammadiyah 2 Bontang</p>
         </div>
     </header>
+  </div>
+  <div class="row mb-lg-2">
+    <div class="col-lg-12">
+      <div class="row">
+        <div class="col-lg-3 col-md-6 col-12">
+          <div class="card  mb-4 ">
+            <div class="card-body p-3">
+              <div class="row">
+                <div class="col-8">
+                  <div class="numbers">
+                    <a href="#">
+                      <p class="text-sm mb-0 text-uppercase font-weight-bold">Guru</p>
+                      <h5 class="font-weight-bolder">
+                        
+                      </h5>
+                    </a>
+                  </div>
+                </div>
+                <div class="col-4 text-end">
+                  <div class="icon icon-shape bg-gradient-primary shadow-primary text-center rounded-circle">
+                    <i class="fa-sharp fa-solid fa-users text-lg opacity-10" aria-hidden="true"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 col-12">
+            <div class="card  mb-4 ">
+              <div class="card-body p-3">
+                <div class="row">
+                  <div class="col-8">
+                    <div class="numbers">
+                      <a href="#">
+                        <p class="text-sm mb-0 text-uppercase font-weight-bold">Jurusan</p>
+                        <h5 class="font-weight-bolder">
+                        </h5>
+                      </a>
+                    </div>
+                  </div>
+                  <div class="col-4 text-end">
+                    <div class="icon icon-shape bg-gradient-warning shadow-warning text-center rounded-circle">
+                      <i class="fa-sharp fa-solid fa-user-graduate text-lg opacity-10" aria-hidden="false"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-6 col-12">
+          <div class="card  mb-4 ">
+            <div class="card-body p-3">
+              <div class="row">
+                <div class="col-8">
+                  <div class="numbers">
+                    <a href="#">
+                      <p class="text-sm mb-0 text-uppercase font-weight-bold">Kelas</p>
+                      <h5 class="font-weight-bolder">
+                        
+                      </h5>
+                    </a>
+                  </div>
+                </div>
+                <div class="col-4 text-end">
+                  <div class="icon icon-shape bg-gradient-danger shadow-danger text-center rounded-circle">
+                    <i class="fa-sharp fa-solid fa-address-book text-lg opacity-10" aria-hidden="true"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 col-12">
+          <div class="card  mb-4 ">
+            <div class="card-body p-3">
+              <div class="row">
+                <div class="col-8">
+                  <div class="numbers">
+                    <a href="#">
+                      <p class="text-sm mb-0 text-uppercase font-weight-bold">Mapel</p>
+                      <h5 class="font-weight-bolder">
+                      </h5>
+                    </a>
+                  </div>
+                </div>
+                <div class="col-4 text-end">
+                  <div class="icon icon-shape bg-gradient-success shadow-success text-center rounded-circle">
+                    <i class="fa-sharp fa-solid fa-user text-lg opacity-10" aria-hidden="true"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
 </div>
