--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load auth_extras %}
 {% load static %}
 
 <!DOCTYPE html>
@@ -110,6 +111,59 @@
                     </a>
                   </li>
                 </ul>
+                {% if request.user|has_group:'pegawai' %} 
+                      <a href="javascript:;" class="nav-link text-white p-0 mt-0 mb-0 " id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                        <img src="{{request.user.pegawai.profile_pic.url}}" class="avatar avatar-sm  position-relative rounded-circle border border-primary">                                                                 
+                      </a>
+                      <ul class="dropdown-menu dropdown-menu-end px-2 py-3 me-sm-n3" aria-labelledby="dropdownMenuButton">
+                        <li class="mb-2">
+                          <a class="dropdown-item border-radius-md" href="">
+                            <div class="d-flex py-1">
+                              <div class="my-auto">
+                                <img src="{{request.user.pegawai.profile_pic.url}}" class="avatar avatar-sm  me-3 " alt="user image">
+                              </div>
+                              <div class="d-flex flex-column justify-content-center">
+                                <h6 class="text-sm font-weight-normal mb-1">
+                                  <span class="font-weight-bold">{{user.username}}</span>
+                                </h6>                                
+                              </div>
+                            </div>
+                          </a>
+                        </li>
+                        <li class="mb-2">
+                          <a class="dropdown-item border-radius-md" href="">
+                            <div class="d-flex py-1">
+                              <div class="my-auto">
+                                <div class="icon icon-shape icon-sm text-center d-flex position-relative  avatar avatar-sm  me-3 ">
+                                  <i class="fa-solid fa-file-pen text-primary text-sm opacity-10"></i>                                        
+                                </div>
+                              </div>                              
+                              <div class="d-flex flex-column justify-content-center">
+                                <h6 class="text-sm font-weight-normal mb-0">
+                                  <span class="">Update Data</span>
+                                </h6>
+                              </div>
+                            </div>
+                          </a>
+                        </li>
+                        <li class="mb-2">
+                          <a class="dropdown-item border-radius-md" href="{% url 'logout' %}">
+                            <div class="d-flex py-1">
+                              <div class="my-auto">
+                                <div class="icon icon-shape icon-sm text-center d-flex position-relative  avatar avatar-sm  me-3 ">
+                                  <i class="fa-sharp fa-solid fa-arrow-right-from-bracket text-primary text-sm opacity-10"></i>                                         
+                                </div>
+                              </div>                              
+                              <div class="d-flex flex-column justify-content-center">
+                                <h6 class="text-sm font-weight-normal mb-0">
+                                  <span class="">Log Out</span>
+                                </h6>
+                              </div>
+                            </div>
+                          </a>
+                        </li>
+                      </ul>   
+                      {% endif %}   
                 <!-- tempat ganti foto profile -->
               </li>
             </ul>
