--- a/templates/menus.html
+++ b/templates/menus.html
@@ -1,3 +1,4 @@
+{% load auth_extras %}
 {% load static %}
 
 {% url 'index' as index %}
@@ -19,6 +20,8 @@
 {% url 'jadwal' as jadwal %} -->
 
 <div class="collapse navbar-collapse  w-auto h-auto" id="sidenav-collapse-main">
+  <!-- Menu Admin -->
+  {% if request.user|has_group:'admin' %} 
   <ul class="navbar-nav">
     <li class="nav-item">
       <a class="nav-link {% if request.path == index %} active {% endif %}" href="{% url 'index' %}">
@@ -85,4 +88,50 @@
         </a>
     </li>
   </ul>
+  {% endif %}
+  <!-- Menu Pegawai -->
+  {% if request.user|has_group:'pegawai' %} 
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link {% if request.path == index %} active {% endif %}" href="{% url 'index' %}">
+        <div class="icon icon-shape icon-sm text-center d-flex align-items-center justify-content-center">
+          <i class="ni ni-align-left-2 text-info text-sm"></i>
+        </div>
+        <span class="nav-link-text ms-1">Dashboard</span>
+      </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">
+          <div class="icon icon-shape icon-sm text-center d-flex align-items-center justify-content-center">
+            <i class="ni ni-single-02 text-info text-sm opacity-10"></i>
+          </div>
+          <span class="nav-link-text ms-1">Guru</span>
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">
+          <div class="icon icon-shape icon-sm text-center d-flex align-items-center justify-content-center">
+            <i class="ni ni-time-alarm text-info text-sm opacity-10"></i>
+          </div>
+          <span class="nav-link-text ms-1">Range Jam</span>
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">
+          <div class="icon icon-shape icon-sm text-center d-flex align-items-center justify-content-center">
+            <i class="ni ni-single-copy-04 text-info text-sm opacity-10"></i>
+          </div>
+          <span class="nav-link-text ms-1">Jadwal Khusus</span>
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">
+          <div class="icon icon-shape icon-sm text-center d-flex align-items-center justify-content-center">
+            <i class="ni ni-calendar-grid-58 text-info text-sm opacity-10"></i>
+          </div>
+          <span class="nav-link-text ms-1">Penjadwalan</span>
+        </a>
+    </li>
+  </ul>
+  {% endif %}
 </div>
