--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -33,18 +33,17 @@
                 </form>
               </div>
             </div>
-          </div>
           <div class="card-footer text-center pt-0 px-lg-2 px-1">
             <p class="mb-4 text-sm mx-auto">
               Don't have an account?
               <a href="{% url 'registerpage' %}" class="text-primary text-gradient font-weight-bold">Sign Up</a>
             </p>
           </div>
+        </div>
           <div
             class="col-6 d-lg-flex d-none h-100 my-auto pe-0 position-absolute top-0 end-0 text-center justify-content-center flex-column">
-            <div
-              class="position-relative bg-gradient-primary h-100 m-3 px-7 border-radius-lg d-flex flex-column justify-content-center overflow-hidden"
-              style="background-image: url('{% static " images/Asset_Final.png" %}'); background-size: cover;">
+            <div class="position-relative bg-gradient-primary h-100 m-3 px-7 border-radius-lg d-flex flex-column justify-content-center overflow-hidden"
+              style="background-image: url('{% static "images/Asset_Final.png" %}'); background-size: cover;">
               <span class="mask bg-gradient-primary opacity-6"></span>
               <h4 class="mt-5 text-white font-weight-bolder position-relative">"Attention is the new currency"</h4>
               <p class="text-white position-relative">The more effortless the writing looks, the more effort the writer
