--- a/templates/menus.html
+++ b/templates/menus.html
@@ -40,7 +40,7 @@
         </a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">
+        <a class="nav-link {% if request.path == mapel %} active {% endif %}" href="{% url 'mapel' %}">
           <div class="icon icon-shape icon-sm text-center d-flex align-items-center justify-content-center">
             <i class="ni ni-books text-info text-sm opacity-10"></i>
           </div>
@@ -80,7 +80,7 @@
         </a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">
+        <a class="nav-link {% if request.path == jadwalkhusus %} active {% endif %}" href="{% url 'jadwalkhusus' %}">
           <div class="icon icon-shape icon-sm text-center d-flex align-items-center justify-content-center">
             <i class="ni ni-single-copy-04 text-info text-sm opacity-10"></i>
           </div>
