--- a/templates/mapel/mapel.html
+++ b/templates/mapel/mapel.html
@@ -7,6 +7,28 @@
 
 <main class="main-content position-relative border-radius-lg ">
   <div class="container-fluid py-4">
+    <div class="row mb-5">
+      <div class="col-12">
+        <div class="multisteps-form mb-5">
+          <!--progress bar-->
+          <div class="row">
+            <div class="col-12 col-lg-8 mx-auto my-4">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="mb-0">Form Tambah Data Mata Pelajaran</h5>
+                  <form method="POST" action="" class="multisteps-form__form mb-8"  enctype="multipart/form-data">
+                    {% csrf_token %}                                                             
+                    <!-- form add user -->
+                      {{form | crispy}}                                                                                                 
+                    <button class="btn bg-gradient-dark ms-auto mb-0" type="submit" title="Send">Send</button>   
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="row justify-content-center mt-4">
       <div class="col-12">
         <div class="card">
@@ -15,7 +37,6 @@
               <h5 class="mb-0">Tabel Mata Pelajaran</h5>
               <div class="ms-auto my-auto mt-lg-0 mt-4">
                 <div class="ms-auto my-auto">
-                  <a href="{% url 'create_mapel' %}" class="btn bg-gradient-primary btn-sm mb-0">+&nbsp; Mapel</a>
                   <a href="" class="btn btn-outline-primary btn-sm mb-0"> Import</a>
                   <a href="" class="btn btn-outline-primary btn-sm mb-0" target="_blank">Export</a>
                 </div>
