--- a/templates/rumusan/rumusan.html
+++ b/templates/rumusan/rumusan.html
@@ -10,42 +10,49 @@
             <div class="card-header pb-0">
                       <div class="d-lg-flex">
                         <div>
-                          <h5 class="mb-0">Table Ruangan</h5>
+                          <h5 class="mb-0">Table Rumusan</h5>
                           <p class="text-sm mb-0">
                             A lightweight, extendable, dependency-free javascript HTML table plugin.
                           </p>
                         </div>
                         <div class="ms-auto my-auto mt-lg-0 mt-4">
                           <div class="ms-auto my-auto">
-                              <a href="{% url 'add_jadwal' %}" class="btn bg-gradient-primary btn-sm mb-0">+&nbsp; Ruangan</a>
                               
                           </div>
                         </div>
                       </div>
-            </div>
+            </div> 
             <div class="table-responsive">
               <table class="table table-flush" id="datatable-search">
                 <thead class="thead-light">
                   <tr>
-                    <th>hari</th>
-                    <th>jumlah sesi</th>  
-                    <th>lama_sesi</th>  
-                    <th>jam mulai</th> 
+                    <th>No</th>
+                    <th>Guru</th>  
+                    <th>Request Hari</th>  
+                    <th>Kelas</th> 
+                    <th>Total</th> 
+                    <th>Beban Kerja</th> 
+                    <th>Hasil Rumusan</th> 
                     <th class="text-center">Tindakan</th>                   
                   </tr>
                 </thead>
                 <tbody>
-                  {% for jd in Jadwal%}                  
+                  {% for r in rumusan_form %}                  
                   <tr>
-                    <td class="text-sm font-weight-small">{{jd.hari}}</td>
-                    <td class="text-sm font-weight-small">{{jd.jumlah_sesi}}</td>   
-                    <td class="text-sm font-weight-small">{{jd.lama_sesi}}</td> 
-                    <td class="text-sm font-weight-small">{{jd.jam_mulai}}</td>               
+                    <td class="text-sm font-weight-small">{{r.id}}</td>
+                    <td class="text-sm font-weight-small">{{r.id_guru}}</td>   
+                    <td class="text-sm font-weight-small">{{r.hari_request}}</td> 
+                    <td class="text-sm font-weight-small">{{r.kelas}}</td>     
+                    <td class="text-sm font-weight-small">{{r.total}}</td>               
+                    <td class="text-sm font-weight-small">{{r.beban_kerja}}</td>   
+                    <td class="text-sm font-weight-small">{{r.hasil_rumusan}}</td>               
+
+
                     <td class= "text-center">
-                      <a href="{% url 'update_jadwal' jd.id %}"class="btn btn-outline-success" data-bs-toggle="tooltip" data-bs-original-title="Edit">
+                      <a href="{% url 'update_rumusan' r.id %}"class="btn btn-outline-success" data-bs-toggle="tooltip" data-bs-original-title="Edit">
                       ubah
                       </a>
-                      <button type="button"  data-bs-toggle="modal" class="btn btn-outline-danger" data-bs-target="#Delete{{jd.id}}"  >
+                      <button type="button"  data-bs-toggle="modal" class="btn btn-outline-danger" data-bs-target="#Delete{{r.id}}"  >
                         hapus
                       </button>
                     </td>
@@ -56,15 +63,15 @@
                     <div class="modal-dialog mt-lg-10">
                       <div class="modal-content">
                         <div class="modal-header">
-                          <h5 class="modal-title" id="ModalLabel">Hapus{{jd.jd_nummber}}</h5>
+                          <h5 class="modal-title" id="ModalLabel">Hapus{{r.hasil_rumusan}}</h5>
                           <i class="fas fa-upload ms-3"></i>
                           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-                          <p>Are you sure you want to delete<strong> {{jd.jd_nummber}}</strong> permanently?</p>
+                          <p>Are you sure you want to delete<strong> {{r.hasil_rumusan}}</strong> permanently?</p>
                         </div>
                         <div class="modal-footer">
-                        <form method="POST" action="{% url 'delete_ruangan' jd.id %}">
+                        <form method="POST" action="{% url 'delete_rumusan' r.id %}">
                             {% csrf_token %}
                           <button type="button" class="btn bg-gradient-secondary btn-sm" data-bs-dismiss="modal">Close</button>
                           <input type="submit" class ="btn btn-danger" name="Confirm">
